# groqmind

./: .gitignore  CHANGELOG.md  README.md  TODO.md  pyproject.toml
src/groqmind/: config.py  main.py  prompts.py  session.py
src/groqmind/routers/: chat.py
src/groqmind/static/: index.html
